--- a/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
@@ -40,7 +40,7 @@
                 <!--MATRICULA OPCOES-->
                 <div class="dropdown-container">
                     <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
-                    <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
+                    <a href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
                 </div>
                 <!--REGISTRO-->
                 <button class="dropdown-btn">
@@ -98,50 +98,51 @@
         </nav>
 
         <div class="content" id="content">
-
-            <br />
             <div class="lista" id="lista">
-                <center>
                     <table>
                         <tr>
-                            <th><a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">TURMA</a></th>
-                            <th><a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_curso.cshtml">CURSO</a></th>
-                            <th><a href="~/HTMLCSS/Listagem/Lista_alunos/aluno.cshtml">ALUNO</a></th>
+                            <th>MATRICULA</th>
+                            <th>ALUNO</th>
+                            <th>CPF</th>
+                            <th>TURMA</th>
+                            <th>CURSO</th>
+                            <th>OPÇÕES</th>
                         </tr>
-                        @{List<matricula> lista = Funcoes.Listagem_Matricula_Turma();}
-
+                        @{List<matricula> lista = Funcoes.Listagem_Matricula();}
                         @foreach (matricula matriculados in lista)
                         {
-                            <tr>
-                                <td>@matriculados.idmatricula</td>
-                                <td>@matriculados.idaluno</td>
-                                <td>@matriculados.idturma</td>
-                                <td>
+                        <tr>
+                            <td>@matriculados.idmatricula</td>
+                            <td>@matriculados.idaluno</td>
+                            <td>@matriculados.idturma</td>
+                            <td>@matriculados.extraum</td>
+                            <td>@matriculados.extradois</td>
+                            <td>
+                                <div class="options">
                                     <form method="post" action="#editar">
-                                        <input type="text" style="visibility:hidden" id="matriculaid" name="matriculaid" value="@matriculados.idmatricula" />
+                                        <input type="hidden" id="userid" name="userid" value="@matriculados.idmatricula" />
                                         <button class="btn_edit">
-                                            <span class="glyphicon glyphicon-edit"></span> Editar
+                                            <span class="glyphicon glyphicon-edit"></span>
                                         </button>
                                     </form>
-
-                                    <form method="post" action="~/HTMLTEMP/Exclusao/delete_matricula.cshtml">
-                                        <input type="text" style="visibility:hidden" id="matriculaid" name="matriculaid" value="@matriculados.idmatricula" />
+                                    <form method="post" action="#excluir">
+                                        <input type="hidden" id="userid" name="userid" value="@matriculados.idmatricula" />
 
                                         <button class="btn_remove">
-                                            <span class="glyphicon glyphicon-remove-circle"></span> Remover
+                                            <span class="glyphicon glyphicon-remove-circle"></span>
                                         </button>
                                     </form>
-                                </td>
-                            </tr>
+                                </div>
+
+                            </td>
+                        </tr>
+                            
                         }
-
                     </table>
-
-                </center>
             </div>
         </div>
     </section>
-
+    
     <script src="~/JS/Index.js">
     </script>
 </body>
