--- a/Projeto_Final/HTMLTEMP/Checagem/check_userarea.cshtml
+++ b/Projeto_Final/HTMLTEMP/Checagem/check_userarea.cshtml
@@ -1,37 +1,59 @@
 ﻿@using Projeto_Final.CSHARP;
 
 @{
+    //Conecta com o BD
     BancoDeDados.DBConnect();
-
     pessoa usuario = new pessoa();
+    string nivel = Funcoes.Nivel_acesso(usuario);
+
+    //Variavel de controle
+    Boolean logado = false;
+
+    //Cria o obj cookie e recebe o mesmo pelo obj Request
+
     HttpCookie cookie = Request.Cookies["UserLogin"];
-    usuario.cpf = cookie.Value.ToString();
-    string Nivel = Funcoes.Nivel_acesso(usuario);
 
-    switch (Nivel)
+    if (cookie != null)
     {
-        case "administrador":
-            <text>
-                <script>
-                    window.location.href = "/HTMLCSS/UserArea/userarea_admin.cshtml";
-                </script>
-            </text>
-            break;
+        logado = true;
+    }
+    else
+    {
+        <text>
+            <script>
+                window.location.href = "/Index.cshtml";
+                alert("ALGO DEU ERRADO");
+            </script>
+        </text>
+    }
 
-        case "professor":
-            <text>
-                <script>
-                    window.location.href = "/HTMLCSS/UserArea/userarea_prof.cshtml";
-                </script>
-            </text>
-            break;
-        case "usuario":
-            <text>
-                <script>
-                    window.location.href = "/HTMLCSS/UserArea/userarea_aluno.cshtml";
-                </script>
-            </text>
-            break;
+    if (logado)
+    {
+        switch (cookie.Value.ToString())
+        {
+            case "administrador":
+                <text>
+                    <script>
+                        window.location.href = "/HTMLCSS/UserArea/userarea_admin.cshtml";
+                    </script>
+                </text>
+                break;
+
+            case "professor":
+                <text>
+                    <script>
+                        window.location.href = "/HTMLCSS/UserArea/userarea_prof.cshtml";
+                    </script>
+                </text>
+                break;
+            case "usuario":
+                <text>
+                    <script>
+                        window.location.href = "/HTMLCSS/UserArea/userarea_aluno.cshtml";
+                    </script>
+                </text>
+                break;
+        }
     }
 
 }
