--- a/Projeto_Final/HTMLCSS/Editar/edit_user.cshtml
+++ b/Projeto_Final/HTMLCSS/Editar/edit_user.cshtml
@@ -123,7 +123,7 @@
                             {
                                 <h3>CPF</h3>
                                 <p>@listagempessoa.cpf</p>
-                                <form method ="post" action="~/HTMLTEMP/Edicao/editin_user.cshtml" onsubmit="return checkPassword(this);" >
+                                <form method="post" action="editin_user.cshtml" onsubmit="return checkPassword(this);" >
                                     <input type="hidden" id="userid" name="userid" value="@listagempessoa.cpf" />
                                     <h3>NOME</h3>
                                     <input type="text" name="nomeid" id="nomeid" class="campo_nome"
