--- a/Projeto_Final/HTMLCSS/Editar/edit_user_profe.cshtml
+++ b/Projeto_Final/HTMLCSS/Editar/edit_user_profe.cshtml
@@ -6,16 +6,15 @@
     HttpCookie cookiecpf = Request.Cookies["UserCpf"];
 
     string usercpf = cookiecpf.Value.ToString();
-    pessoa usuario = new pessoa();
-
-    usuario.cpf = cookiecpf.Value.ToString();
 
     if (cookie != null)
     {
         logado = true;
     }
 
+    pessoa usuario = new pessoa();
 
+    usuario.cpf = cookiecpf.Value.ToString();
 }
 
 <!DOCTYPE html>
@@ -124,23 +123,37 @@
                             {
                                 <h3>CPF</h3>
                                 <p>@listagempessoa.cpf</p>
+                                <form method="post" action="editin_user.cshtml" onsubmit="return checkPassword(this);" >
+                                    <input type="hidden" id="userid" name="userid" value="@listagempessoa.cpf" />
+                                    <h3>NOME</h3>
+                                    <input type="text" name="nomeid" id="nomeid" class="campo_nome"
+                                           placeholder="@listagempessoa.nome" minlenght="3" maxlength="100" /><br />
 
-                                <h3>NOME</h3>
-                                <p>@listagempessoa.nome</p>
+                                    <h3>EMAIL</h3>
+                                    <input type="email" name="emailid" id="emailid" class="campo_email"
+                                           placeholder="@listagempessoa.email" maxlength="100" />
 
-                                <h3>EMAIL</h3>
-                                <p>@listagempessoa.email</p>
+                                    <h3>TELEFONE</h3>
+                                    <input type="tel" name="telid" class="campo_tel"
+                                           placeholder="@listagempessoa.telefone" minxlength="11"
+                                           maxlength="14" />
 
-                                <h3>TELEFONE</h3>
-                                <p>@listagempessoa.telefone</p>
-
-                                <h3>SENHA</h3>
-                                <p><small>**********</small></p>
-
-                            }
-                        </center>
-                        <a class="editbtn" href="~/HTMLCSS/Editar/edit_user_profe.cshtml">
-                            <span class="material-symbols-outlined">edit_note</span>
+                                    <h3>SENHA</h3>
+                                    <input type="password" id="senhaid1" name="senhaid1" class="campo_senha1"
+                                           placeholder="nova senha" minlength="6" maxlength="16" />
+                                    <br />
+                                    <input type="password" id="senhaid2" name="senhaid2" class="campo_senha2"
+                                           placeholder="verifique nova senha" minlength="6" maxlength="16" />
+                                    <br />
+                                    <button>
+                                        <span class="material-symbols-outlined">edit_note</span> EDITAR
+                                    </button>
+                                    <br />
+                                </form>
+                             }
+                            </center>
+                        <a class="cnclbtn" href="~/HTMLCSS/UserArea/userarea_prof.cshtml">
+                            <span class="material-symbols-outlined">arrow_back</span>
                         </a>
 
                     </div>
