--- a/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
@@ -40,7 +40,7 @@
                 <!--MATRICULA OPCOES-->
                 <div class="dropdown-container">
                     <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
-                    <a href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
+                    <a class="active" href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
                 </div>
                 <!--REGISTRO-->
                 <button class="dropdown-btn">
