--- a/Projeto_Final/HTMLCSS/Listagem/listagem_setores.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_setores.cshtml
@@ -65,7 +65,7 @@
                     <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
                     <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
-                    <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
+                    <a class="active" href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
                 </div>
                 <!--PESQUISA-->
                 <button class="dropdown-btn">
