--- a/Projeto_Final/HTMLCSS/Registro/matricula.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/matricula.cshtml
@@ -38,7 +38,7 @@
             </button>
             <!--MATRICULA OPCOES-->
             <div class="dropdown-container">
-                <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                <a class="active"  href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
                 <a href="~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml">Alunos Matriculados</a>
             </div>
             <!--REGISTRO-->
