--- a/Projeto_Final/HTMLCSS/Registro/registro_turma.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro_turma.cshtml
@@ -50,7 +50,7 @@
             <!--REGISTRO OPCOES-->
             <div class="dropdown-container">
                 <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
-                <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
+                <a  class="active" href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
                 <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
             </div>
             <!--LISTAGEM-->
