--- a/Projeto_Final/HTMLCSS/UserArea/userarea_prof.cshtml
+++ b/Projeto_Final/HTMLCSS/UserArea/userarea_prof.cshtml
@@ -100,7 +100,7 @@
                     Provas
                 </a>
                 <!--AREA DO USUARIO-->
-                <a href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
+                <a class="active"  href="~/HTMLTEMP/Checagem/check_userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
