--- a/Projeto_Final/HTMLCSS/Listagem/Listagem_Alunos.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/Listagem_Alunos.cshtml
@@ -62,7 +62,7 @@
                 </button>
                 <!--LISTAGEM OPCOES-->
                 <div class="dropdown-container">
-                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
+                    <a class="active" href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
                     <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
