--- a/Projeto_Final/HTMLCSS/Listagem/listagem_turma.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_turma.cshtml
@@ -63,7 +63,7 @@
                 <!--LISTAGEM OPCOES-->
                 <div class="dropdown-container">
                     <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
-                    <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
+                    <a class="active" href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                     <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
                 </div>
