--- a/Projeto_Final/HTMLCSS/Listagem/Listagem_Alunos.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/Listagem_Alunos.cshtml
@@ -99,60 +99,59 @@
 
         <div class="content" id="content">
             <div class="lista" id="lista">
-                    <table>
-                        <tr>
-                            <th>CPF</th>
-                            <th>NOME</th>
-                            <th>EMAIL</th>
-                            <th>TELEFONE</th>
-                            <th>
-                                <button class="dropdown-btn">
-                                    NIVEL DE ACESSO<span class="material-symbols-outlined">expand_more</span>
-                                </button>
-                                <div class="dropdown-container">
-                                    <a href="~/HTMLCSS/Listagem/Listagem_Admins.cshtml">administrador</a><br />
-                                    <a href="~/HTMLCSS/Listagem/Listagem_Alunos.cshtml">usuario</a><br />
-                                    <a href="~/HTMLCSS/Listagem/Listagem_Professores.cshtml">professor</a><br />
-                                </div>
-                            </th>
-                            <th>OPÇÕES</th>
-                        </tr>
-                        @{List<pessoa> lista = Funcoes.Listagem_Alunos();}
-                        @foreach (pessoa listagemalunos in lista)
-                        {
-                        <tr>
-                            <td>@listagemalunos.cpf</td>
-                            <td>@listagemalunos.nome</td>
-                            <td>@listagemalunos.email</td>
-                            <td>@listagemalunos.telefone</td>
-                            <td>@listagemalunos.nivacesso</td>
-                            <td>
-                                <div class="options">
-                                    <form method="post" action="#editar">
-                                        <input type="hidden" id="userid" name="userid" value="@listagemalunos.cpf" />
-                                        <button class="btn_edit">
-                                            <span class="glyphicon glyphicon-edit"></span>
-                                        </button>
-                                    </form>
-                                    <form method="post" action="~/HTMLTEMP/Exclusao/delete_user.cshtml">
-                                        <input type="hidden" id="userid" name="userid" value="@listagemalunos.cpf" />
+                <table>
+                    <tr>
+                        <th>CPF</th>
+                        <th>NOME</th>
+                        <th>EMAIL</th>
+                        <th>TELEFONE</th>
+                        <th>
+                            <button class="dropdown-btn">
+                                NIVEL DE ACESSO<span class="material-symbols-outlined">expand_more</span>
+                            </button>
+                            <div class="dropdown-container">
+                                <a href="~/HTMLCSS/Listagem/Listagem_Admins.cshtml">administrador</a><br />
+                                <a href="~/HTMLCSS/Listagem/Listagem_Alunos.cshtml">usuario</a><br />
+                                <a href="~/HTMLCSS/Listagem/Listagem_Professores.cshtml">professor</a><br />
+                            </div>
+                        </th>
+                        <th>OPÇÕES</th>
+                    </tr>
+                    @{List<pessoa> lista = Funcoes.Listagem_Alunos();}
+                    @foreach (pessoa listagemalunos in lista)
+                    {
+                    <tr>
+                        <td>@listagemalunos.cpf</td>
+                        <td>@listagemalunos.nome</td>
+                        <td>@listagemalunos.email</td>
+                        <td>@listagemalunos.telefone</td>
+                        <td>@listagemalunos.nivacesso</td>
+                        <td>
+                            <div class="options">
+                                <form method="post" action="#editar">
+                                    <input type="hidden" id="userid" name="userid" value="@listagemalunos.cpf" />
+                                    <button class="btn_edit">
+                                        <span class="glyphicon glyphicon-edit"></span>
+                                    </button>
+                                </form>
+                                <form method="post" action="~/HTMLCSS/Listagem/remove/delete_user.cshtml">
+                                    <input type="hidden" id="userid" name="userid" value="@listagemalunos.cpf" />
 
-                                        <button class="btn_remove">
-                                            <span class="glyphicon glyphicon-remove-circle"></span>
-                                        </button>
-                                    </form>
-                                </div>
+                                    <button class="btn_remove">
+                                        <span class="glyphicon glyphicon-remove-circle"></span>
+                                    </button>
+                                </form>
+                            </div>
                                 
-                            </td>
-                        </tr>
+                        </td>
+                    </tr>
                             
-                        }
-                    </table>
+                    }
+                </table>
             </div>
         </div>
     </section>
     
-    <script src="~/JS/Index.js">
-    </script>
+    <script src="~/JS/Index.js"></script>
 </body>
 </html>
