--- a/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
@@ -125,8 +125,8 @@
                                             <span class="glyphicon glyphicon-edit"></span>
                                         </button>
                                     </form>
-                                    <form method="post" action="#excluir">
-                                        <input type="hidden" id="userid" name="userid" value="@matriculados.idmatricula" />
+                                    <form method="post" action="~/HTMLCSS/Listagem/remove/delete_matricula.cshtml">
+                                        <input type="hidden" id="matriculaid" name="matriculaid" value="@matriculados.idmatricula" />
 
                                         <button class="btn_remove">
                                             <span class="glyphicon glyphicon-remove-circle"></span>
