--- a/Projeto_Final/HTMLCSS/Listagem/remove/delete_matricula.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/remove/delete_matricula.cshtml
@@ -9,7 +9,7 @@
 
     <text>
         <script>
-            window.location.href = "~/HTMLCSS/Listagem/Lista_alunos/aluno_turma.cshtml";
+            window.location.href = "/HTMLCSS/Listagem/listagem_matriculas.cshtml";
         </script>
     </text>
 }
