--- a/Projeto_Final/HTMLCSS/Main/main.cshtml
+++ b/Projeto_Final/HTMLCSS/Main/main.cshtml
@@ -124,25 +124,25 @@
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 4</div>
-                        <a href="#"><img src="~/IMG/img1.jpg" style="width:100%"></a>
+                        <a href="#"><img src="~/IMG/slide1.jpg" style="width:100%"></a>
                         <div class="text">CURSO WEB DESIGN</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">2 / 4</div>
-                        <a href="#"><img src="~/IMG/img2.jpg" style="width:100%"></a>
+                        <a href="#"><img src="~/IMG/slide2.jpg" style="width:100%"></a>
                         <div class="text">CURSO DE ARDUINO</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">3 / 4</div>
-                        <a href="#"><img src="~/IMG/img3.jpeg" style="width:100%"></a>
+                        <a href="#"><img src="~/IMG/slide3.jpeg" style="width:100%"></a>
                         <div class="text">CURSO DE INTERNET DAS COISAS (IOT)</div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">4 / 4</div>
-                        <a href="#"><img src="~/IMG/img4.jpg" style="width:100%"></a>
+                        <a href="#"><img src="~/IMG/slide4.jpg" style="width:100%"></a>
                         <div class="text">CURSO DE PROGRAMAÇÃO ORIENTADA A OBJETOS (POO)</div>
                     </div>
                 </div>
