--- a/Projeto_Final/HTMLCSS/Listagem/Listagem_Alunos.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/Listagem_Alunos.cshtml
@@ -128,7 +128,7 @@
                         <td>@listagemalunos.nivacesso</td>
                         <td>
                             <div class="options">
-                                <form method="post" action="#editar">
+                                <form method="post" action="#">
                                     <input type="hidden" id="userid" name="userid" value="@listagemalunos.cpf" />
                                     <button class="btn_edit">
                                         <span class="glyphicon glyphicon-edit"></span>
